Social Network App fully tested with Postman and successfully connected to MongoDB

--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-node_modules
-.DS_Store
-MONGO_URL = mongodb+srv://TheAnswer07:walabok7@cluster0.w0nndnq.mongodb.net/socialNetwork?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://TheAnswer07:9uShyPsLYT5Ti63A@cluster0.w0nndnq.mongodb.net/SocialNetwork?retryWrites=true&w=majority
